Better payment links handling
